# demo_application

./: README.md  pyproject.toml
controller/: app_controller.py
demo_application.egg-info/: PKG-INFO  SOURCES.txt
model/: business_logic.py
view/: main_window.py
