[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_application"
version = "0.1.0"
description = "A demo calculator application using MVC pattern"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["model", "view", "controller"]